h1. CHANGELOG

h2. 1.4.12 unreleased

* update gem 'bootstrap-sass' from 2.0.1 to 2.0.3

h2. 1.4.11 May 13, 2012

* fix 'add_user' recipe to add patch for https://github.com/RailsApps/rails3-application-templates/issues/35
* update 'omniauth' recipe to add RSpec tests (contributed by Taylor Mock)
* update gem 'mongoid' from 2.4.9 to 2.4.10
* update gem 'factory_girl_rails' from 3.2.0 to 3.3.0

h2. 1.4.10 May 11, 2012

* fix 'subdomains' recipe to accommodate recent changes
* fix 'omniauth_email' recipe to redirect if user's email is blank (contributed by Taylor Mock)

h2. 1.4.9 May 11, 2012

* add 'responders' recipe (contributed by allen13)
* fix 'html5' recipe so Twitter Bootstrap icons will be available with 'bootstrap_sass' option
* fix 'cucumber' recipe to add ':require => false' and avoid warning message
* fix 'active_admin' recipe to correct typo for activeadmin-mongoid gem (contributed by Alex Kravets)
* fix 'users_page' recipe to force it to run after 'add_user' recipe
* fix 'add_user' recipe to remove a uniqueness constraint when Mongoid is used (contributed by nrser)
* fix 'add_user' recipe to remove superfluous 'attr_accessible' comment
* fix 'add_user' recipe to accommodate mongoid when Devise invitable module is used
* update gem 'devise' from 2.1.0.rc to 2.1.0.rc2
* update gem 'haml' from 3.1.4 to 3.1.5
* update gem 'rspec-rails' from 2.9.0.rc2 to 2.10.1

h2. 1.4.8 April 26, 2012

* improve 'extras' recipe to offer to install gem 'therubyracer' for Linux users without node.js
* fix 'html5' recipe to add gem 'therubyracer' for 'Bootstrap with Less' option

h2. 1.4.7 April 25, 2012

* improve 'html5' recipe to move flash messages into partials for application layouts
* add 'paperclip' recipe with support for mongoid and cloudfiles (contributed by merlinvn)
* add 'cloudfiles' recipe (contributed by merlinvn)
* improve 'extras' recipe to support mongoid for will_paginate (contributed by merlinvn) 